dx causes non-BMP characters to fail to render https://bugs.webkit.org/show_bug.cgi?id=18039 <rdar://problem/10422142>

Reviewed by Simon Fraser.

Don't split the surrogate pairs of non-BMP characters across
elements of <text> positioning lists.

Test: svg/text/non-bmp-positioning-lists.svg

* rendering/svg/SVGTextLayoutAttributesBuilder.cpp:
(WebCore::SVGTextLayoutAttributesBuilder::propagateLayoutAttributes):

Add a test combining non-BMP characters and positioning lists.

* platform/mac/svg/text/non-bmp-positioning-lists-expected.png: Added.
* platform/mac/svg/text/non-bmp-positioning-lists-expected.txt: Added.
* svg/text/non-bmp-positioning-lists.svg: Added.



Canonical link: https://commits.webkit.org/90018@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101537 268f45cc-cd09-0410-ab3c-d52691b4dbfc